--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-time-machine
 title : Welcome to my homepage
-description : Will keep you posted
+description : Will keep you posted!
